--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -44,7 +44,9 @@
                   <hr class="mt-6 border-b-1 border-gray-400" />
                 </div>
                 <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
-                  <div class="text-gray-500 text-xl text-center mb-3 font-bold">
+                  <div
+                    class="text-gray-500 text-2xl text-center mb-3 font-bold"
+                  >
                     <small>CONNEXION</small>
                   </div>
 
@@ -58,12 +60,12 @@
                   >
                     <div class="form-group relative w-full mb-3">
                       <label
-                        class="block text-gray-700 text-sm font-bold mb-2"
+                        class="block text-gray-700 text-base font-bold mb-2"
                         for="username"
                         >Nom d'utilisateur</label
                       ><input
                         type="text"
-                        class="form-control border-0 px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:ring ring-greenLight w-full"
+                        class="form-control border-b-2 border-gray px-0 py-3 placeholder-gray text-gray-700 bg-inherit text-sm focus:outline-none w-full"
                         placeholder="Entrez votre adresse email"
                         style="transition: all 0.15s ease 0s"
                         name="username"
@@ -131,7 +133,7 @@
                         class="bg-green text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
                         style="transition: all 0.15s ease 0s"
                       >
-                        Connexion
+                        se connecter
                       </button>
                     </div>
                     <div class="form-group">
