--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,7 +40,7 @@
       <!-- gestion des comptes -->
       <li *ngIf="showAdminBoard">
         <a
-          routerLink="/comptes"
+          routerLink="/admin"
           routerLinkActive="active"
           href="#"
           class="hover:text-white active:text-white active:font-medium"
@@ -168,7 +168,7 @@
               class="py-2 px-4 w-full transition ease-in-out delay-30 hover:bg-neutral-100 hover:text-green"
             >
               <a href="" routerLink="/ajoutEb"
-                >Importer un extrait de delevé banacire</a
+                >Importer un extrait de relevé banacire</a
               >
             </div>
             <!-- <hr /> -->
